# cpp-regexlib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  justfile  regexlib.h
.github/workflows/: benchmark.yml  ci.yml
docs/: design.ja.md  design.md  reference.ja.md  reference.md
test/: CMakeLists.txt  regexlib_bench.cc  regexlib_corpus.cc  regexlib_corpus_data.h  regexlib_corpus_gen.cc  regexlib_corpus_gen.py  regexlib_fuzz.cc  regexlib_std_compat_test.cc  regexlib_test.cc  scan_diff.cc
tools/: README.md  check_doc_identifiers.py  fetch_ucd.py  generate_ucd.py
tools/ucd/: .gitignore  SHA256SUMS
